--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment"
-tools:context=".MainActivity" android:layout_width="match_parent"
-android:layout_height="match_parent" tools:ignore="MergeRootFrame" />
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment"
+    android:name="app.gerardo.popularmovies2.MainFragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="app.gerardo.popularmovies2.MainFragment"
+    tools:layout="@android:layout/list_content" />
