--- a/app/src/main/res/menu/menu_details_movie.xml
+++ b/app/src/main/res/menu/menu_details_movie.xml
@@ -1,10 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="app.gerardo.popularmovies2.DetailsMovieActivity">
-    <item
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+<item
         android:id="@+id/menu_item_share"
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         android:title="@string/action_share"
         app:actionProviderClass=
             "android.support.v7.widget.ShareActionProvider" />
