Adding database operations

--- a/app/src/main/res/layout/fragment_details_movie.xml
+++ b/app/src/main/res/layout/fragment_details_movie.xml
@@ -49,7 +49,7 @@
         android:layout_margin="@dimen/fab_margin"
         app:layout_anchorGravity="bottom|right|end"
         app:layout_anchor="@id/app_bar_movie_details"
-        android:src="@android:drawable/ic_btn_speak_now" />
+        android:src="@drawable/ic_heart_white_24dp" />
 
 
 </android.support.design.widget.CoordinatorLayout>
