--- a/app/src/main/res/layout/content_details_movie.xml
+++ b/app/src/main/res/layout/content_details_movie.xml
@@ -77,6 +77,13 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <TextView
+                    android:id="@+id/movie_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    />
+
 
 
                 <LinearLayout
@@ -85,6 +92,9 @@
                     android:orientation="horizontal"
                     android:layout_marginTop="@dimen/margin_vertical_borders"
                     android:layout_marginBottom="@dimen/margin_vertical_borders">
+
+
+
                     <TextView
                         android:id="@+id/release_date_label"
                         android:layout_width="0dp"
