Ending delete using content provider and custom styles on UI

--- a/app/src/main/res/layout/items_video.xml
+++ b/app/src/main/res/layout/items_video.xml
@@ -7,13 +7,15 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@drawable/ic_theaters_white_24dp"/>
 
     <TextView
         android:id="@+id/trailer_name"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:text="Test"/>
+        android:textSize="15sp"
+        android:textColor="@android:color/white"
+        />
 
 </LinearLayout>
