--- a/app/src/main/res/layout/content_details_movie.xml
+++ b/app/src/main/res/layout/content_details_movie.xml
@@ -21,7 +21,7 @@
 
             <android.support.v7.widget.CardView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="220dp"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 app:cardCornerRadius="4dp"
                 app:cardElevation="@dimen/cardview_default_elevation"
@@ -36,8 +36,9 @@
                     <ImageView
                         android:id="@+id/img_poster"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@mipmap/ic_launcher"/>
+                        android:layout_height="180dp"
+                        android:scaleType="centerCrop"
+                        />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -82,9 +83,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="1"
+                    android:textSize="22sp"
+                    android:textColor="@android:color/white"
                     />
-
-
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -93,14 +94,14 @@
                     android:layout_marginTop="@dimen/margin_vertical_borders"
                     android:layout_marginBottom="@dimen/margin_vertical_borders">
 
-
-
                     <TextView
                         android:id="@+id/release_date_label"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/release_date"
+                        android:textSize="15sp"
+                        android:textColor="@android:color/white"
                         />
 
                     <TextView
@@ -108,7 +109,9 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:gravity="right" />
+                        android:gravity="right"
+                        android:textSize="15sp"
+                        android:textColor="@android:color/white"/>
 
                 </LinearLayout>
 
@@ -124,6 +127,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/popularity_label"
+                        android:textSize="15sp"
+                        android:textColor="@android:color/white"
                         />
 
                     <TextView
@@ -131,7 +136,9 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:gravity="right" />
+                        android:gravity="right"
+                        android:textSize="15sp"
+                        android:textColor="@android:color/white"/>
 
                 </LinearLayout>
 
@@ -157,6 +164,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="@string/overview_label"
+                android:textSize="18sp"
+                android:textColor="@android:color/white"
                 />
 
             <TextView
@@ -164,6 +173,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="3dp"
+                android:textSize="15sp"
+                android:textColor="@android:color/white"
                 />
         </LinearLayout>
 
@@ -183,6 +194,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="@string/trailer_label"
+                android:textSize="18sp"
+                android:textColor="@android:color/white"
                 />
 
         </LinearLayout>
@@ -204,6 +217,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="@string/reviews"
+                android:textSize="18sp"
+                android:textColor="@android:color/white"
                 />
 
         </LinearLayout>
