--- a/app/src/main/res/layout/items_review.xml
+++ b/app/src/main/res/layout/items_review.xml
@@ -6,28 +6,30 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/ic_face_white_24dp"
         android:id="@+id/imageView" />
 
     <TextView
         android:id="@+id/author_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Author"
         android:layout_above="@+id/content_label"
         android:layout_alignLeft="@+id/content_label"
-        android:layout_alignStart="@+id/content_label" />
+        android:layout_alignStart="@+id/content_label"
+        android:textSize="18sp"
+        android:textColor="@android:color/white"/>
 
     <TextView
         android:id="@+id/content_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Content"
         android:layout_alignBottom="@+id/imageView"
         android:layout_toRightOf="@+id/imageView"
         android:layout_toEndOf="@+id/imageView"
         android:layout_marginLeft="28dp"
         android:layout_marginStart="28dp"
+        android:textSize="15sp"
+        android:textColor="@android:color/white"
         />
 
 </RelativeLayout>
